# GLVulkanTest

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/glvulkantest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: shader.vert  vert.spv
app/src/main/cpp/: CMakeLists.txt  glvulkantest.cpp
app/src/main/java/com.example.glvulkantest.Native/: com_example_glvulkantest_Native.h
app/src/main/java/com/example/glvulkantest/: GLVulkanView.java  MainActivity.java  Native.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/glvulkantest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ref/: VulkanTestHelpers.cpp  VulkanTestHelpers.h
